# tidbyt-icalendar

./: .gitignore  .python-version  LICENSE  README.md  chore_wheel.py  draw_freebusy.py  grab_events.py  pyproject.toml  requirements.txt  tidbyt-example-config.yaml  tidbyt.yaml.example  utils.py
fonts/: 5x8.pbm  6x13.pbm  CG-pixel-3x5-mono.pbm  CG-pixel-3x5-mono.pil  CG-pixel-4x5-mono.pbm  CG-pixel-4x5-mono.pil  Dina_r400-6.pbm  Dina_r400-6.pil  tb-8.pbm  tb-8.pil
